@@ -1,6 +1,8 @@
 Revision history for PerlX-QuoteOperator
 
 {{$NEXT}}
+        - Added section to pod that shows how to create your own module
+          defining a custom quote operator.
 
 0.07  2015-02-27 20:20:53 GMT
         - Minor cpanfile & pod changes
